fixes over maven and settings